opam-version: "2.0"
authors:      "Dave Scott <dave@recoil.org>"
maintainer:   "dave@recoil.org"
homepage:     "https://github.com/mirage/mirage-block-unix"
dev-repo:     "git+https://github.com/mirage/mirage-block-unix.git"
bug-reports:  "https://github.com/mirage/mirage-block-unix/issues"
tags:         "org:mirage"
license:      "ISC"
synopsis: """
Unix implementation of the Mirage_types.BLOCK interface
"""
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
  [ "jbuilder" "runtest" "-p" name ] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "jbuilder" {build & >="1.0+beta10"}
  "cstruct" {>= "3.0.0"}
  "cstruct-lwt"
  "mirage-block-lwt" {>= "1.0.0"}
  "rresult"
  "io-page-unix" {>= "2.0.0"}
  "uri" {>= "1.9.0"}
  "logs"
  "ounit" {test}
  "diet" {test}
  "fmt" {test}
  "ppx_sexp_conv" {test}
]
depexts: [
 [["alpine"] ["linux-headers"]]
]
