(executables
 (names benchmark test stress)
 (libraries lwt cstruct-lwt mirage-block-unix cstruct io-page
   logs logs.fmt ounit2 diet))

(alias
 (name runtest)
 (deps
  (:< test.exe))
 (action
  (run %{<} -runner sequential)))

(alias
 (name runtest)
 (deps
  (:< stress.exe))
 (action
  (run %{<})))
